# Robotics-Master-Mondragon-Unibertsitatea

./: LICENSE  README.md
Artificial Vision/: README.md
Artificial Vision/MATLAB/data/: rectification.mat
Artificial Vision/MATLAB/data/camcal/: calibrationSession.mat  camcal.m  camcal2.m
Artificial Vision/MATLAB/fcn/: fun_calcDistances.m  fun_calcStatistics.m  fun_findCircles.m  fun_loadImg.m  fun_makeInfLine.m  fun_plotResults.m  fun_undistWarp.m
Mobile Robotics/: README.md
Mobile Robotics/Localization/: README.md
Perception/: README.md
Perception/laser_Stripe_Sensor_Calibration_and_PointCloudGeneration/: Project_1.m  homography_with_errors.m  laserLine_calibration_point_cloud_generation.m  monte_carlo_sim.m  readme.txt
Recycling Plant Simulation in Gazebo using ROS/: README.md
Recycling Plant Simulation in Gazebo using ROS/ur5/: README
Recycling Plant Simulation in Gazebo using ROS/ur5/src/hrwros_support/: package.xml
Recycling Plant Simulation in Gazebo using ROS/ur5/src/hrwros_support/urdf/robot_pedestal/: robot_pedestal.urdf.xacro
Recycling Plant Simulation in Gazebo using ROS/ur5/src/moveit_python_interface/: package.xml
Recycling Plant Simulation in Gazebo using ROS/ur5/src/my_ur5_moveit_config/: package.xml
Recycling Plant Simulation in Gazebo using ROS/ur5/src/my_ur_gazebo/: package.xml
Robotics Mondragon Unibertsitatea/: README.md
Robotics Mondragon Unibertsitatea/Artificial Vision/MATLAB/: Mini_project.m
Robotics Mondragon Unibertsitatea/Perception/laser_Stripe_Sensor_Calibration_and_PointCloudGeneration/: perception_project_1.m
(+71 files in other folders)
